# TSQ

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  REPOSITORY_ANALYSIS.md  RandomGenerator.h  RandomGenerator.hpp  TSCTest.cpp  ThreadSafeContainer.cpp  ThreadSafeContainer.h  ThreadSafeContainer.hpp  ThreadSafeContainerPrivate.h  ThreadSafeContainerPrivate.hpp
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/src/: main.cpp
benchmarks/: CMakeLists.txt  bench_main.cpp
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  producer_consumer.cpp
lib/: CMakeLists.txt
lib/cmake/: tscConfig.cmake.in
lib/include/tsc/: random_generator.hpp  thread_safe_container.hpp
lib/include/tsc/detail/: random_generator.hpp
tests/: CMakeLists.txt  test_basic.cpp  test_move_only.cpp  test_multi_waiter_wakeup.cpp  test_shutdown_drain.cpp  test_timed.cpp
